--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div id="menu">
                 <ul id="links">
-                    <li><a href="CV_Julie_Brun(FinalTer).pdf" download="CV_Julie_Brun" target="_blank">Télécharger-moi !</a></li>
+                    <li><a href="CV_Julie_Brun_Final.pdf" download="CV_Julie_Brun" target="_blank">Télécharger-moi !</a></li>
                     <li><a href="mailto:brun.julie91@gmail.com">Envoyer un message !</a></li>
                 </ul>
             </div>
@@ -176,7 +176,7 @@
         <h2 id="Titre05" class="Titre">Contact</h2>
         <div id="menu02">
             <ul id="links02">
-                <li><a href="CV_Julie_Brun(FinalTer).pdf" download="CV_Julie_Brun" target="_blank">Télécharger-moi !</a></li>
+                <li><a href="CV_Julie_Brun_Final.pdf" download="CV_Julie_Brun" target="_blank">Télécharger-moi !</a></li>
                 <li><a href="mailto:brun.julie91@gmail.com">Envoyer un message !</a></li>
             </ul>
         </div>
