--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div id="menu">
                 <ul id="links">
-                    <li><a href="CV_Julie_Brun_Final.pdf" download="CV_Julie_Brun" target="_blank">Télécharger-moi !</a></li>
+                    <li><a href="CV-Julie-Brun.pdf" download="CV_Julie_Brun" target="_blank">Télécharger-moi !</a></li>
                     <li><a href="mailto:brun.julie91@gmail.com">Envoyer un message !</a></li>
                 </ul>
             </div>
@@ -43,7 +43,7 @@
                 <img id="Astronaute" class="Image" src="Images/CVBouton03.png" alt="Astronaute">
                 <h2 id="Titre01" class="Titre">Présentation</h2>
                 <p id="Présentation" class="Bulle">Etudiante en Développement Web et Web Mobile à Simplon.co, coder est devenu mon quotidien.
-                    Un quotidien que j'entends poursuivre au travers du stage que je réaliserai, courant Janvier. <br>
+                    Un quotidien que j'entends poursuivre au travers de la formation en alternance que je débuterai en Septembre. <br>
                     Curieuse et motivée, je suis une personne créative qui aime relever des défis. De nature passionnée, partager
                     mes connaissances et apprendre en retour est une de mes motivations principales. <br>
                     Ma force réside essentiellement dans ma patience, mon adaptabilité ... Et mon sourire ravageur ! ;) <br>
@@ -56,7 +56,8 @@
                 <img id="Comète" class="Image" src="Images/CVBouton02.png" alt="Comète">
                 <h2 id="Titre02" class="Titre">Formation</h2>
                 <p id="Formation" class="Bulle">
-                    2019 - Certification Agilité ( En cours ) <br>
+                    2019 - Certification "Développement Web et Web Mobile" ( En cours ) <br>
+                    <span class="nv2">Certification de niveau III</span> <br>
                     <span>Simplon.co, Saint-Maur-des-Fossés ( 94100 )</span> <br>
                     &#x2605; <br>
                     2019 - Certification Opquast ( En cours ) <br>
@@ -64,11 +65,7 @@
                     &#x2605; <br>
                     2019 - Certification FreeFormers <br>
                     <span>Simplon.co, Saint-Maur-des-Fossés ( 94100 )</span> <br>
-                    &#x2605; <br>
-                    2019 - Formation "Développement Web et Web Mobile" ( En cours ) <br>
-                    <span class="nv2">Certification de niveau III</span> <br>
-                    <span>Simplon.co, Saint-Maur-des-Fossés ( 94100 )</span> <br>
-                    &#x2605; <br>
+                    &#x2605; <br>                    
                     2019 - Certification "Mobiliser les compétences numériques fondamentales" <br>
                     <span class="nv2">Réalisation de "Hope's Journey" ( <a href="https://hopesjourney.netlify.com/" target="_blank">hopesjourney.netlify.com</a> )</span> <br>
                     <span>Simplon.co, Paris ( 75020 )</span> <br>
@@ -78,11 +75,34 @@
                 </p>
             </div>
     
-            <!-- Compétences -->
+            <!-- Expériences -->
             <div class="Section">
                 <img id="Fusée" class="Image" src="Images/CVBouton01.png" alt="Fusée">
-                <h2 id="Titre03" class="Titre">Compétences</h2>
-                <p id="Compétences" class="Bulle">HTML5 | CSS3 | Javascript | Jquery <br>
+                <h2 id="Titre03" class="Titre">Expériences</h2>
+                <p id="Expériences" class="Bulle">
+                    2020 - Réalisation d'un site : "Hope's Journey" V2 ( En cours )
+                    <span>MERN Stack</span> <br>
+                    &#x2605; <br>
+                    2020 - Réalisation d'un Portfolio ( En cours ) <br>
+                    <span>ReactJS/ThreeJS</span> <br>
+                    &#x2605; <br>
+                    2020 - Réalisation d'un site vitrine : "Akuapéli" ( Non visible ) <br>
+                    <span>HTML/CSS/Javascript vanille</span> <br>
+                    &#x2605; <br>
+                    2019 - Réalisation d'un jeu type Puissance 4 : "Blob 4" (<a href="https://julie-brun.github.io/Blob4/" target="_blank">julie-brun.github.io/Blob4/</a> )
+                    <span>HTML/CSS/JQuery</span> <br>
+                    &#x2605; <br>
+                    2019 - Réalisation d'un site vitrine : "Hope's Journey" ( <a href="https://hopesjourney.netlify.com/" target="_blank">hopesjourney.netlify.com</a> )
+                    <span>HTML/CSS/Javascript vanille</span> <br>
+                    &#x2605; <br>
+                    2009/10 - Equipière polyvalente <br>
+                    <span>McDonald's Austerlitz, Paris ( 75013 )</span> <br>
+                    <br>
+                    &#x2605; <br>
+                    <br>
+                    HTML5 | CSS3 | Javascript | Jquery | ReactJS<br>
+                    &#x2605; <br>
+                    NodeJS | ExpressJS | MongoDB<br>
                     &#x2605; <br>
                     VSCode | Photoshop | Gimp 2 | Git & Github<br>
                     &#x2605; <br>
