--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                 <img id="Comète" class="Image" src="Images/CVBouton02.png" alt="Comète">
                 <h2 id="Titre02" class="Titre">Formation</h2>
                 <p id="Formation" class="Bulle">
-                    2019 - Certification "Développement Web et Web Mobile" ( En cours ) <br>
+                    2019/20 - Certification "Développement Web et Web Mobile" ( En cours ) <br>
                     <span class="nv2">Certification de niveau III</span> <br>
                     <span>Simplon.co, Saint-Maur-des-Fossés ( 94100 )</span> <br>
                     &#x2605; <br>
-                    2019 - Certification Opquast ( En cours ) <br>
+                    2019 - Certification Opquast <br>
                     <span>Simplon.co, Saint-Maur-des-Fossés ( 94100 )</span> <br>
                     &#x2605; <br>
                     2019 - Certification FreeFormers <br>
@@ -80,7 +80,7 @@
                 <img id="Fusée" class="Image" src="Images/CVBouton01.png" alt="Fusée">
                 <h2 id="Titre03" class="Titre">Expériences</h2>
                 <p id="Expériences" class="Bulle">
-                    2020 - Réalisation d'un site : "Hope's Journey" V2 ( En cours )
+                    2020 - Réalisation d'un site : "Hope's Journey" V2 ( En cours ) <br>
                     <span>MERN Stack</span> <br>
                     &#x2605; <br>
                     2020 - Réalisation d'un Portfolio ( En cours ) <br>
@@ -89,10 +89,10 @@
                     2020 - Réalisation d'un site vitrine : "Akuapéli" ( Non visible ) <br>
                     <span>HTML/CSS/Javascript vanille</span> <br>
                     &#x2605; <br>
-                    2019 - Réalisation d'un jeu type Puissance 4 : "Blob 4" (<a href="https://julie-brun.github.io/Blob4/" target="_blank">julie-brun.github.io/Blob4/</a> )
+                    2019 - Réalisation d'un jeu type Puissance 4 : "Blob 4" (<a href="https://julie-brun.github.io/Blob4/" target="_blank">julie-brun.github.io/Blob4/</a> ) <br>
                     <span>HTML/CSS/JQuery</span> <br>
                     &#x2605; <br>
-                    2019 - Réalisation d'un site vitrine : "Hope's Journey" ( <a href="https://hopesjourney.netlify.com/" target="_blank">hopesjourney.netlify.com</a> )
+                    2019 - Réalisation d'un site vitrine : "Hope's Journey" ( <a href="https://hopesjourney.netlify.com/" target="_blank">hopesjourney.netlify.com</a> ) <br>
                     <span>HTML/CSS/Javascript vanille</span> <br>
                     &#x2605; <br>
                     2009/10 - Equipière polyvalente <br>
@@ -135,7 +135,7 @@
     
         <section id="textArea">
             <p id="Présentation02" class="text">Etudiante en Développement Web et Web Mobile à Simplon.co, coder est devenu mon quotidien.
-                Un quotidien que j'entends poursuivre au travers du stage que je réaliserai, courant Janvier. <br>
+                Un quotidien que j'entends poursuivre au travers de la formation en alternance que je débuterai en Septembre. <br>
                 Curieuse et motivée, je suis une personne créative qui aime relever des défis. De nature passionnée, partager
                 mes connaissances et apprendre en retour est une de mes motivations principales. <br>
                 Ma force réside essentiellement dans ma patience, mon adaptabilité ... Et mon sourire ravageur ! ;) <br>
@@ -143,36 +143,56 @@
                 Je me ferais une joie de faire de nouvelles rencontres. Aussi, n'hésitez pas à me contacter !</p>
 
             <p id="Formation02" class="text">
-                    2019 - Certification Agilité ( En cours ) <br>
-                    <span>Simplon.co, Saint-Maur-des-Fossés ( 94100 )</span> <br>
-                    &#x2605; <br>
-                    2019 - Certification Opquast ( En cours ) <br>
-                    <span>Simplon.co, Saint-Maur-des-Fossés ( 94100 )</span> <br>
-                    &#x2605; <br>
-                    2019 - Certification FreeFormers <br>
-                    <span>Simplon.co, Saint-Maur-des-Fossés ( 94100 )</span> <br>
-                    &#x2605; <br>
-                    2019 - Formation "Développement Web et Web Mobile" ( En cours ) <br>
-                    <span class="nv2">Certification de niveau III</span> <br>
-                    <span>Simplon.co, Saint-Maur-des-Fossés ( 94100 )</span> <br>
-                    &#x2605; <br>
-                    2019 - Certification "Mobiliser les compétences numériques fondamentales" <br>
-                    <span class="nv2">Réalisation de "Hope's Journey" ( <a href="https://hopesjourney.netlify.com/" target="_blank">hopesjourney.netlify.com</a> )</span> <br>
-                    <span>Simplon.co, Paris ( 75020 )</span> <br>
-                    &#x2605; <br>
-                    2009 - Baccalauréat Littéraire, option Arts Plastiques <br>
-                    <span>Lycée Rosa Parks, Montgeron ( 91230 )</span> <br>
+                2019/20 - Certification "Développement Web et Web Mobile" ( En cours ) <br>
+                <span class="nv2">Certification de niveau III</span> <br>
+                <span>Simplon.co, Saint-Maur-des-Fossés ( 94100 )</span> <br>
+                &#x2605; <br>
+                2019 - Certification Opquast <br>
+                <span>Simplon.co, Saint-Maur-des-Fossés ( 94100 )</span> <br>
+                &#x2605; <br>
+                2019 - Certification FreeFormers <br>
+                <span>Simplon.co, Saint-Maur-des-Fossés ( 94100 )</span> <br>
+                &#x2605; <br>                    
+                2019 - Certification "Mobiliser les compétences numériques fondamentales" <br>
+                <span class="nv2">Réalisation de "Hope's Journey" ( <a href="https://hopesjourney.netlify.com/" target="_blank">hopesjourney.netlify.com</a> )</span> <br>
+                <span>Simplon.co, Paris ( 75020 )</span> <br>
+                &#x2605; <br>
+                2009 - Baccalauréat Littéraire, option Arts Plastiques <br>
+                <span>Lycée Rosa Parks, Montgeron ( 91230 )</span> <br>
             </p>
 
-            <p id="Compétences02" class="text">HTML5 | CSS3 | Javascript | Jquery <br>
-                    &#x2605; <br>
-                    VSCode | Photoshop | Gimp 2 | Git & Github<br>
-                    &#x2605; <br>
-                    Je suis ... <br>
-                    #Créative #Motivée #Réactive #Sérieuse #Rigoureuse #Positive #Polyvalente #Autonome #Espritd’équipe <br>
-                    &#x2605; <br>
-                    Anglais : Bonnes notions <br>
-                    </p>
+            <p id="Compétences02" class="text">                    
+                2020 - Réalisation d'un site : "Hope's Journey" V2 ( En cours ) <br>
+                <span>MERN Stack</span> <br>
+                &#x2605; <br>
+                2020 - Réalisation d'un Portfolio ( En cours ) <br>
+                <span>ReactJS/ThreeJS</span> <br>
+                &#x2605; <br>
+                2020 - Réalisation d'un site vitrine : "Akuapéli" ( Non visible ) <br>
+                <span>HTML/CSS/Javascript vanille</span> <br>
+                &#x2605; <br>
+                2019 - Réalisation d'un jeu type Puissance 4 : "Blob 4" (<a href="https://julie-brun.github.io/Blob4/" target="_blank">julie-brun.github.io/Blob4/</a> ) <br>
+                <span>HTML/CSS/JQuery</span> <br>
+                &#x2605; <br>
+                2019 - Réalisation d'un site vitrine : "Hope's Journey" ( <a href="https://hopesjourney.netlify.com/" target="_blank">hopesjourney.netlify.com</a> ) <br>
+                <span>HTML/CSS/Javascript vanille</span> <br>
+                &#x2605; <br>
+                2009/10 - Equipière polyvalente <br>
+                <span>McDonald's Austerlitz, Paris ( 75013 )</span> <br>
+                <br>
+                &#x2605; <br>
+                <br>
+                HTML5 | CSS3 | Javascript | Jquery | ReactJS<br>
+                &#x2605; <br>
+                NodeJS | ExpressJS | MongoDB<br>
+                &#x2605; <br>
+                VSCode | Photoshop | Gimp 2 | Git & Github<br>
+                &#x2605; <br>
+                Je suis ... <br>
+                #Créative #Motivée #Réactive #Sérieuse #Rigoureuse #Positive #Polyvalente #Autonome #Espritd’équipe <br>
+                &#x2605; <br>
+                Anglais : Bonnes notions <br>
+            </p>
 
             <p  id="Hobbies02" class="text">- Arts Plastiques : Dessin, peinture, sculpture <br>
                 &#x2605; <br>
